Enhance admin and student pages: adjust layout and styling for better usability, update font sizes, and improve evaluation form structure

--- a/Feedbacksystem/static/css/adminpage.css
+++ b/Feedbacksystem/static/css/adminpage.css
@@ -260,7 +260,11 @@ margin-top: 1em;
 margin-top: 1em;
 margin-left: 0.5em;
 }
-
+main {
+  height: calc(80vh); /* Adjust to leave space for padding */
+  overflow-y: auto; /* Add a vertical scrollbar when content overflows */
+  margin-top: 5rem;
+}
 }
   
  
