--- a/Feedbacksystem/templates/pages/hr_dashboard.html
+++ b/Feedbacksystem/templates/pages/hr_dashboard.html
@@ -176,7 +176,7 @@
 <!-- Button with Form Dropdown -->
 <div class="d-flex" style="gap: 1em;">
     <div class="dropdown mb-2">
-      <button class="btn custom-btn dropdown-toggle" type="button" id="filterDropdown" data-bs-toggle="dropdown" aria-expanded="false">
+      <button class="btn btn-secondary custom-btn dropdown-toggle" type="button" id="filterDropdown" data-bs-toggle="dropdown" aria-expanded="false">
           <i class="bi bi-funnel-fill"></i> Filter Data
       </button>
       <div class="dropdown-menu filter_dropdown" aria-labelledby="filterDropdown">
