--- a/Feedbacksystem/templates/pages/view_society_president_schoolevent_evaluations.html
+++ b/Feedbacksystem/templates/pages/view_society_president_schoolevent_evaluations.html
@@ -124,6 +124,7 @@
                             }]
                         },
                         options: {
+                            indexAxis: 'y',
                             scales: {
                                 x: {
                             ticks: {
