--- a/Feedbacksystem/templates/pages/view_society_president_webinar_evaluations.html
+++ b/Feedbacksystem/templates/pages/view_society_president_webinar_evaluations.html
@@ -12,7 +12,7 @@
 {% block feature %}
 
 <div class="row">
-    <div class="col-xl-6" style="max-height: 400px; overflow-y: auto;">
+    <div class="col-xl-6" style="max-height: 500px; overflow-y: auto;">
         <table class="table table-responsive table-bordered">
                 <tr>
                  <th  scope="col" style="color:#fafafa;  background: #2a9134">I.  Overall Evaluation </th>
@@ -222,6 +222,7 @@
                             }]
                         },
                         options: {
+                            indexAxis: 'y',
                             scales: {
                                 x: {
                             ticks: {
