Enhance faculty and event management pages: update button styles for better visibility, add message alerts, and improve event modal layout

--- a/Feedbacksystem/templates/pages/admin.html
+++ b/Feedbacksystem/templates/pages/admin.html
@@ -256,11 +256,13 @@
               data: [{{positive_count}}, {{negative_count}}, {{neutral_count}}],
               backgroundColor: [
                 'rgba(80, 180, 120, 1)', // Positive
-                'rgba(255, 0, 0, 1)' // Negative
+                'rgba(255, 0, 0, 1)', // Negative
+                'rgba(128, 128, 128, 1)' // Negative
               ],
               borderColor: [
                 'rgba(80, 180, 120, 1)',
-                'rgba(255, 0, 0, 1)'
+                'rgba(255, 0, 0, 1)',
+                'rgba(128, 128, 128, 1)'
               ],
               borderWidth: 1
             }]
