--- a/Feedbacksystem/templates/pages/faculty_delete_form.html
+++ b/Feedbacksystem/templates/pages/faculty_delete_form.html
@@ -13,7 +13,7 @@
 <form method="POST" action="">
     {% csrf_token %}
     <p> Are you sure you want to delete {{obj}} ?</p>
-    <a href="{{request.META.HTTP_REFERER}}" style="text-decoration: none; " class="btn btn-primary">Cancel</a>
+    <a href="{{request.META.HTTP_REFERER}}" style="text-decoration: none; " class="btn btn-danger">Cancel</a>
 
 
 <input type = "submit" value="Confirm" class="btn btn-success">
